--- a/views/register.html
+++ b/views/register.html
@@ -28,8 +28,8 @@
             <div class="signup-content">
                <div class="signup-form">
                     <form method="POST" class="form-inline register-form" id="register-form">
-        		<h1 class="form-group">Requester Registration</h1>
-        		<p1 class="form-group">Create an iCrowdTask Account</p1>
+        		<h1 class="form-group">Admin Registration</h1>
+        		<p1 class="form-group">Create an Admin Account</p1>
 		<div class="form-group">
 
                             <label for="country">Country of residence :*</label>
